--- a/src/GeoTrack-API/GeoTrack-API/GeoTrack-API.csproj
+++ b/src/GeoTrack-API/GeoTrack-API/GeoTrack-API.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
+    <PackageReference Include="Scalar.AspNetCore" Version="1.2.4" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
   </ItemGroup>
 
