--- a/src/GeoTrack-API/docker-compose.yml
+++ b/src/GeoTrack-API/docker-compose.yml
@@ -1,6 +1,29 @@
 services:
+  postgres:
+    image: postgres:16
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: geotrack
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - geotrack_postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d geotrack"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+
   geotrack-api:
     image: ${DOCKER_REGISTRY-}geotrackapi
     build:
       context: .
-      dockerfile: GeoTrack-API/Dockerfile
+      dockerfile: GeoTrack.API/Dockerfile
+    depends_on:
+      postgres:
+        condition: service_healthy
+
+volumes:
+  geotrack_postgres_data:
